Added some test and git hub action to build and test the project.

--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Print greeting
         run: |
           echo "Hello World!"
-          echo "First worklow is running"
+          echo "First workflow is running"
       - name: Print goodbye
         run: echo "Done - bye!"
     
