--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           distribution: 'oracle'
           java-version: '17'
+          java-package: jdk
+          architecture: x64
           check-latest: true
           cache: 'gradle'
       - name: Build with Gradle
