excluded test as part of the build

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
           check-latest: true
           cache: 'gradle'
       - name: Build with Gradle
-        run: ./gradlew build --no-daemon
+        run: ./gradlew build -x test --no-daemon
       - name: Run tests
         run: ./gradlew test --fail-fast
       # - run: java HelloWorldApp.java
