code checkout and build is needed, as each task is isolated from each other

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,10 +23,10 @@ jobs:
     needs: build-and-test
     runs-on: ubuntu-latest
     steps:
-#      - name: Get code
-#        uses: actions/checkout@v3
-#      - name: Build with Gradle
-#        run: ./gradlew build -x test --no-daemon
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Build with Gradle
+        run: ./gradlew build -x test --no-daemon
       - name: Deploy
         run: echo "Deploying...."
       - name: Run Application
