--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,11 @@
 name: Test Project
 on: [push, workflow_dispatch]
 jobs:
+  info:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output GitHub Action Context
+        run: echo "${{ toJSON(github) }}"
   build-and-test:
     runs-on: ubuntu-latest
     steps:
