--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,11 @@ jobs:
     steps:
       - name: Output GitHub Action Context
         run: echo "${{ toJSON(github) }}"
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v35
+      - name: List all changed files
+        run: echo "${{ toJSON(steps.changed-files.outputs }}"
   build-and-test:
     runs-on: ubuntu-latest
     steps:
