--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
         id: changed-files
         uses: tj-actions/changed-files@v35
       - name: List all changed files
-        run: echo "${{ toJSON(steps.changed-files.outputs }}"
+        run: echo "${{ toJSON(steps.changed-files.outputs) }}"
   build-and-test:
     runs-on: ubuntu-latest
     steps:
